--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,8 +32,8 @@
                 See More Info
             </a>
 
-            <h1>{{ Name }}</h1>
-            <h3>{{ JobTitle }}</h3>
+            <h1>{{ Title }}</h1>
+            <h3>{{ Description }}</h3>
         </div>
         {{/each}}
         
