--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,6 +1,9 @@
-$main-color: white;
-$body-bg: black;
+$main-color: #ffffff;
+$body-bg:#212121;
 
-$heading-color: yellow;
+$splash-heading-color:#FFD25E;
 
-$footer-text-color: orange;
+$other-heading-color: #CFCFCF;
+
+$footer-text-color:white;
+
