--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,15 +7,20 @@
 body {
     color: $main-color;
     background-color: $body-bg;
+    font-family: 'Comfortaa', cursive;
 }
 
-h1, h2, h3 { color: $heading-color }
+h1 {
+    color: $splash-heading-color;
+}
 
-.panel { min-height: 80vh; }
+h2 {
+    color: $other-heading-color;
+}
 
-.panel:nth-child(odd) {
-    background-color: salmon;
-    color: white;
+.panel { 
+    min-height: 80vh; 
+    background-color: #212121;
 }
 
 #to-top { position: fixed; bottom: 10px; right: 10px; display: none; }
