--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,22 +9,22 @@
     <!-- css stuff -->
     <!-- link to reset -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css"> <!-- this is a static path that will automatically search in "public" -->
     <title>My Favourite Things</title>
 </head>
 
 <body>
     <h1>Alissar's Favourite Things</h1>
-    <nav data-module="nav">
-        <!-- nav elements must have nav-item -->
+    <!-- <nav data-module="nav">
         <ul>
             <li><a href="#" class="nav-item">1</a></li>
             <li><a href="/2" class="nav-item">2</a></li>
             <li><a href="#section3" class="nav-item">3</a></li>
             <li><a href="#section4" class="nav-item">4</a></li>
             <li><a href="#section5" class="nav-item">5</a></li>
-        </ul>
-    </nav>
+        </ul> 
+    </nav> -->
 
     <main>
         {{{ body }}}
@@ -33,13 +33,7 @@
     <footer>
         <p>here's some footer text</p>
 
-        <ul>
-            <li><a href="#" class="nav-item">1</a></li>
-            <li><a href="/2" class="nav-item">2</a></li>
-            <li><a href="#section3" class="nav-item">3</a></li>
-            <li><a href="#section4" class="nav-item">4</a></li>
-            <li><a href="#section5" class="nav-item">5</a></li>
-        </ul>
+
     </footer>
 
     <a id="to-top" href="#" class="nav-item">back to top</a>
