--- a/sass/modules/_users.scss
+++ b/sass/modules/_users.scss
@@ -9,7 +9,7 @@
         text-align: center;
         padding: 8px;
 
-        .u-avatar { max-width: 200px; }
+        .icon { max-width: 200px; }
 
         .u-link { 
             display: block; 
@@ -29,7 +29,7 @@
         .user-panel { 
             flex: 1 1;
 
-            .u-avatar { max-width: 300px; }
+            .icon { max-width: 300px; }
         }
     }
 }
