--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -50,7 +50,7 @@
         <!-- you can put all kinds of markup here - semantic tagging, etc -->
         <div class="user-panel">
             <div class="user-panel-header">
-                <img class="u-avatar"></img>
+                <img class="icon"></img>
                 <h1 class="u-name"></h1>
             </div>
 
