--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,9 +1,13 @@
 $main-color: #ffffff;
-$body-bg:#212121;
+$body-bg:#020A2F;
 
-$splash-heading-color:#FFD25E;
+$splash-color: white;
 
-$other-heading-color: #CFCFCF;
+$title-color:#F511F7;
+
+$desc-color: white;
+
+$link-color:#36F3F4;
 
 $footer-text-color:white;
 
