--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,16 +15,7 @@
 </head>
 
 <body>
-    <h1>Alissar's Favourite Things</h1>
-    <!-- <nav data-module="nav">
-        <ul>
-            <li><a href="#" class="nav-item">1</a></li>
-            <li><a href="/2" class="nav-item">2</a></li>
-            <li><a href="#section3" class="nav-item">3</a></li>
-            <li><a href="#section4" class="nav-item">4</a></li>
-            <li><a href="#section5" class="nav-item">5</a></li>
-        </ul> 
-    </nav> -->
+    <h1><a href="#">MY FAV <br> THINGS</a></h1>
 
     <main>
         {{{ body }}}
@@ -36,7 +27,6 @@
 
     </footer>
 
-    <a id="to-top" href="#" class="nav-item">back to top</a>
 
     <script type="module" src="js/main.js"></script>
     <script>
