images inserted in db

--- a/sass/modules/_errors.scss
+++ b/sass/modules/_errors.scss
@@ -6,4 +6,5 @@ body {
 .error-section a {
     color: white;
     text-decoration: none;
+    background-image: url(/public/images/error_bckgrnd.png);
 }
