--- a/views/errorPage.hbs
+++ b/views/errorPage.hbs
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
     
-    <title>Ah crap! Something broke...</title>
+    <title>Oops!</title>
+    
 </head>
 <body>
-    <a href="/">Back Home!</a>
+    <img src="/public/images/error_bckgrnd.png" alt="">
+    <a href="/">Back to Home</a>
   
     <main class="error-section">
     {{{ body }}}
