--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,18 +21,16 @@
         {{{ body }}}
     </main>
 
-    <footer>
-        <p>here's some footer text</p>
 
+    <footer>
+        <p>&copy; 2019 My Fav Things. All Rights Reserved</p>
 
     </footer>
 
 
     <script type="module" src="js/main.js"></script>
     <script>
-        var name = "Justin";
-
-        console.log('name in main file: ' + name);
+       
     </script>
 
     <!-- templates -> these don't get rendered immediately -->
