--- a/views/home.hbs
+++ b/views/home.hbs
@@ -14,11 +14,14 @@
             <h2>{{ Title }}</h2>
             <h4>{{ Description }}</h4>
 
-             <a class="u-link" href="{{ ID }}">
-                Did You Know?
-            </a>
-            <h4>{{ Fact }}</h4>
-            <h5><a href="https://en.wikipedia.org/wiki/Monkey_selfie_copyright_dispute">{{ Link }}</a></h5>
+    <div class="dropdown">
+        <button>Did You Know?</button>
+     <div class="dropdown-content">
+        <h4>{{ Fact }}</h4>
+  </div>
+</div>
+            
+            <h5> <a href = "{{ Link }}" target = "blank">Link</a></h5>
         </div>
         {{/each}}
         
