--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1><a href="#">MY FAV <br> THINGS</a></h1>
+    <h1><a href="/">MY FAV <br> THINGS</a></h1>
 
     <main>
         {{{ body }}}
