--- a/views/errorPage.hbs
+++ b/views/errorPage.hbs
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="css/main.css">
     
     <title>Oops!</title>
-    
 </head>
+
 <body>
-    <img src="/public/images/error_bckgrnd.png" alt="">
+    <div id="errorSplash"><img src="/public/images/error_bckgrnd.png" alt=""></div>
+    <main class="error-section">
     <a href="/">Back to Home</a>
   
-    <main class="error-section">
     {{{ body }}}
     </main>
 
