--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,6 @@
 @import '_vars';
 @import 'modules/_navbar';
-@import 'modules/_users';
-@import 'modules/_lightbox';
+@import 'modules/_hobbies';
 @import 'modules/_errors';
 
 body {
